--- a/public/scss/_main.scss
+++ b/public/scss/_main.scss
@@ -437,19 +437,17 @@ h3 {
     height: 30px;
     width: 100%;
     z-index: 99;
-
     span {
         display: inline-block;
-        width: 70px;
-        height: 50px;
+        width: 100px;
+        height: 70px;
         position: absolute;
         left: 0;
         bottom: 0;
         transform: translateZ(0);
         will-change: left;
         @include transition(left .3s);
-        background-image: url('../i/car1.png');
-        background-size: 50px;
+        background-size: 80px;
         background-repeat: no-repeat;
         background-position: bottom center;
         animation-name: moveFromLeftToRight;
@@ -457,7 +455,22 @@ h3 {
         animation-direction: normal;
         animation-timing-function: linear;
         animation-fill-mode: both;
-        animation-iteration-count: infinite;
-        animation-delay: 2500ms;
+        animation-iteration-count: 1;
+        animation-delay: 2000ms;
+        &.car_1{
+            background-image: url('../i/car1.png');
+        }
+        &.car_2{
+            background-image: url('../i/car2.png');
+        }
+        &.car_3{
+            background-image: url('../i/car3.png');
+        }
+        &.car_4{
+            background-image: url('../i/car4.png');
+        }
+        &.car_5{
+            background-image: url('../i/car5.png');
+        }
     }
 }
